--- a/index.html
+++ b/index.html
@@ -1,13 +1,189 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen Export</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mala Counter (108 Beads)</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom styles */
+        body {
+            /* Subtle gradient background */
+            background: linear-gradient(to bottom, #f0f4f8, #d9e2ec);
+            font-family: 'Inter', sans-serif; /* Using Inter font from Tailwind */
+        }
+
+        /* Style for the main counting button */
+        #count-button {
+            width: 150px; /* Size of the circle */
+            height: 150px;
+            border-radius: 50%; /* Make it a circle */
+            background: linear-gradient(145deg, #8b5cf6, #6d28d9); /* Purple gradient */
+            color: white;
+            font-size: 1.5rem; /* Larger text */
+            font-weight: 600;
+            border: none;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); /* Softer shadow */
+            transition: transform 0.1s ease, box-shadow 0.2s ease;
+            user-select: none; /* Prevent text selection */
+            position: relative; /* Needed for pseudo-elements */
+            overflow: hidden; /* Hide overflowing pseudo-elements */
+        }
+
+        #count-button:active {
+            transform: scale(0.95); /* Press effect */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Bead animation element */
+        #bead-visual {
+            width: 30px;
+            height: 30px;
+            background-color: #facc15; /* Yellow bead color */
+            border-radius: 50%;
+            margin: 1.5rem auto; /* Center it below counts */
+            box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
+            transition: transform 0.15s cubic-bezier(0.175, 0.885, 0.32, 1.275); /* Bouncy transition */
+        }
+
+        /* Animation class to add on click */
+        .bead-roll {
+            transform: scale(1.3) rotate(360deg); /* Grow and spin */
+        }
+
+        /* Container styling */
+        .container {
+             background-color: rgba(255, 255, 255, 0.8); /* Slightly transparent white */
+             backdrop-filter: blur(10px); /* Frosted glass effect */
+             padding: 2rem;
+             border-radius: 1rem; /* More rounded corners */
+             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+             text-align: center;
+             max-width: 350px; /* Limit width */
+             width: 90%;
+        }
+
+        /* Display text styling */
+        .count-label {
+            font-size: 0.9rem;
+            color: #4b5563; /* Gray text */
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+        .count-value {
+            font-size: 3rem;
+            font-weight: 700;
+            color: #4f46e5; /* Indigo */
+            line-height: 1.2;
+        }
+         .cycle-value {
+            font-size: 1.5rem;
+            font-weight: 600;
+            color: #16a34a; /* Green */
+         }
+
+    </style>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <div class="box">Hello from CodePen!</div>
-  <script src="script.js"></script>
+<body class="flex items-center justify-center min-h-screen">
+
+    <div class="container">
+        <h1 class="text-xl font-bold mb-6 text-gray-700">စိပ်ပုတီး</h1>
+
+        <div class="mb-4">
+            <div class="count-label">အလုံးရေ</div>
+            <div class="count-value" id="bead-count-display">0</div>
+        </div>
+        <div class="mb-6">
+             <div class="count-label">အပါတ်ရေ</div>
+             <div class="cycle-value" id="cycle-count-display">0</div>
+        </div>
+
+        <div id="bead-visual"></div>
+
+        <div class="flex justify-center mt-4">
+            <button id="count-button">
+                စိပ်
+            </button>
+        </div>
+
+        <button id="reset-btn" class="mt-6 bg-gray-500 hover:bg-gray-600 text-white font-semibold py-2 px-4 rounded-lg shadow text-sm transition duration-200 ease-in-out">
+                အသစ်ပြန်စ
+         </button>
+
+    </div>
+
+    <script>
+        // Get references to HTML elements
+        const beadCountDisplay = document.getElementById('bead-count-display');
+        const cycleCountDisplay = document.getElementById('cycle-count-display');
+        const countButton = document.getElementById('count-button');
+        const beadVisual = document.getElementById('bead-visual');
+        const resetButton = document.getElementById('reset-btn'); // Get reset button
+
+        // Constants
+        const BEADS_PER_CYCLE = 108;
+
+        // Initialize counts
+        let currentBeadCount = 0;
+        let completedCycles = 0;
+
+        // Function to update the displays
+        function updateDisplay() {
+            beadCountDisplay.textContent = currentBeadCount;
+            cycleCountDisplay.textContent = completedCycles;
+        }
+
+        // Function to handle the bead animation
+        function animateBead() {
+            beadVisual.classList.add('bead-roll');
+
+            // Remove the class after the animation duration (150ms)
+            setTimeout(() => {
+                beadVisual.classList.remove('bead-roll');
+            }, 150); // Match the transition duration in CSS
+        }
+
+        // Event listener for the count button
+        countButton.addEventListener('click', () => {
+            // Increment bead count
+            currentBeadCount++;
+
+            // Check if a cycle is completed
+            if (currentBeadCount > BEADS_PER_CYCLE) {
+                currentBeadCount = 1; // Reset bead count to 1 for the new cycle
+                completedCycles++; // Increment cycle count
+            }
+
+            // Update the numbers on the screen
+            updateDisplay();
+
+            // Trigger the bead animation
+            animateBead();
+        });
+
+         // Event listener for the reset button
+        resetButton.addEventListener('click', () => {
+            currentBeadCount = 0;
+            completedCycles = 0;
+            updateDisplay();
+            // Optional: maybe a small visual feedback for reset
+            beadVisual.style.transform = 'scale(0.8)';
+            setTimeout(() => {
+                 beadVisual.style.transform = 'scale(1)';
+            }, 150);
+        });
+
+
+        // Initial display update when the page loads
+        updateDisplay();
+    </script>
+
 </body>
 </html>
